--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(MARCHING_CUBES)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(MARCHING_CUBES main.cpp)
+add_executable(MARCHING_CUBES main.cpp
+        LIBRARIES/glad/glad.c
+        LIBRARIES/stb/stb.cpp)
